stretch: Create a fixed navigation and add opacity to the background

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,7 +1,6 @@
 // Navigation code here
 
 .navigation {
-    background: #f4f4f4;
     border: 1px double #e0e0e0;
     border-radius: 10px;
     text-align: center; 
@@ -10,6 +9,13 @@
     display: flex;
     flex-direction: column;
     padding-bottom: 15px; 
+
+    // Create a fixed navigation and add opacity to the background
+    position: fixed; 
+    top: 0; 
+    z-index: 10000;
+    width: 100% !important;
+    background-color: rgba(128, 128, 128, 0.5); 
     
     h2 {
         color: #22283B;
